<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <ImageView
        android:id="@+id/background"
        android:src="@drawable/splash_background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="fitXY"/>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="fill_parent"
            android:src="@drawable/xokoban_xmlvm_mirrored"
            android:layout_height="70dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:background="#33000000"
	        android:padding="8dp"
	        android:layout_marginTop="-12px">
	        <TextView
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:textSize="15dp"
	             android:textColor="#fff"
	             android:text="@string/instructions"/>
	        <TextView
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:textSize="12dp"
	             android:textColor="#000"
	             android:text="@string/instructions_text" />
	        <TextView
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:paddingTop="5dp"
	             android:textSize="15dp"
	             android:textColor="#fff"
	             android:text="@string/controls" />
	        <TextView
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:textSize="12dp"
	             android:textColor="#000"
	             android:text="@string/controls_text" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/widgetGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#33600000"
        android:padding="5dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
	        <CheckBox
	            android:id="@+id/accelerometer"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"/>
	        <TextView
	            android:id="@+id/checkBoxLabel"
	            android:text="@string/use_accelerometer"
	    	    android:textSize="13dp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="#fff"/>
        </LinearLayout>
	    <Button
	        android:id="@+id/saveButton"
	        android:text="@string/save"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:textSize="15dp"
	        android:textStyle="bold"/>
	</RelativeLayout>
</RelativeLayout>